SELV3-546: Added datasets logic
