# src/main/resources/api-definition.yaml
@@ -11,19 +11,18 @@ documentation:
 
 schemas:
 - auditLogEntry: !include schemas/auditLogEntry.json
-
 - auditLogEntryArray: |
     {
         "type": "array",
         "items": { "type": "object", "$ref": "schemas/auditLogEntry.json" }
     }
-
 - localizedErrorResponse: !include schemas/localizedErrorResponse.json
-
 - version: !include schemas/version.json
 
 - server: !include schemas/server.json
 - serverPage: !include schemas/serverPage.json
+- dataset: !include schemas/dataset.json
+- datasetPage: !include schemas/datasetPage.json
 
 traits:
 - secured:
@@ -254,7 +253,7 @@ resourceTypes:
                 schema: localizedErrorResponse
       delete:
         is: [ secured ]
-        description: Completely removes Configuration. This action is not recoverable.
+        description: Completely removes server configuration. This action is not recoverable.
         responses:
           204:
             headers:
@@ -333,3 +332,193 @@ resourceTypes:
                 Keep-Alive:
               body:
                 application/json:
+    /datasets:
+      displayName: datasets
+      get:
+        is: [ secured, paginated, sorted ]
+        description: Get all datasets.
+        responses:
+          200:
+            headers:
+              Keep-Alive:
+            body:
+              application/json:
+                schema: datasetPage
+          401:
+            headers:
+              Keep-Alive:
+            body:
+              application/json:
+          403:
+            body:
+              application/json:
+                schema: localizedErrorResponse
+      post:
+        is: [ secured ]
+        description: Add new dataset.
+        body:
+          application/json:
+            schema: dataset
+        responses:
+          201:
+            headers:
+              Keep-Alive:
+            body:
+              application/json:
+                schema: dataset
+          400:
+            body:
+              application/json:
+                schema: localizedErrorResponse
+          401:
+            headers:
+              Keep-Alive:
+            body:
+              application/json:
+          403:
+            body:
+              application/json:
+                schema: localizedErrorResponse
+      /{id}:
+        uriParameters:
+          id:
+            displayName: id
+            type: string
+            required: true
+            repeat: false
+        get:
+          is: [ secured ]
+          description: Get dataset configuration.
+          responses:
+            200:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+                  schema: dataset
+            404:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+                  schema: localizedErrorResponse
+            401:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+            403:
+              body:
+                application/json:
+                  schema: localizedErrorResponse
+        put:
+          is: [ secured ]
+          description: Change dataset parameters.
+          body:
+            application/json:
+              schema: dataset
+          responses:
+            200:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+                  schema: dataset
+            400:
+              body:
+                application/json:
+                  schema: localizedErrorResponse
+            401:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+            403:
+              body:
+                application/json:
+                  schema: localizedErrorResponse
+            404:
+              body:
+                application/json:
+                  schema: localizedErrorResponse
+        delete:
+          is: [ secured ]
+          description: Completely removes dataset. This action is not recoverable.
+          responses:
+            204:
+              headers:
+                Keep-Alive:
+            400:
+              body:
+                application/json:
+                  schema: localizedErrorResponse
+            401:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+            404:
+              headers:
+                Keep-Alive:
+              body:
+                application/json:
+                  schema: localizedErrorResponse
+        /auditLog:
+          description: This represents the audit log for all <<resourcePathName|!singularize>> resources.
+          get:
+            description: Returns all or part of the resource's audit log
+            # Although /auditLog endpoints support "page" and "number" query parameters for pagination,
+            # they don’t return the response body and set of pagination-related values expected to be
+            # returned for core domain resources.
+            is: [ paginated ]
+            queryParameters:
+              author:
+                displayName: author
+                description: Name of the author of changes which should be returned. By default, all changes are returned regardless of author.
+                type: string
+                required: false
+                repeat: false
+              changedPropertyName:
+                displayName: changedPropertyName
+                description: The name of the property about which changes should be returned. If null or empty, changes associated with any and all properties are returned.
+                type: string
+                required: false
+                repeat: false
+            responses:
+              200:
+                headers:
+                  Keep-Alive:
+                body:
+                  application/json:
+                    schema: auditLogEntryArray
+                    example: |
+                      [
+                        {
+                          "changeType": "ValueChange",
+                          "globalId": {
+                            "entity": "org.openlmis.SomeClass",
+                            "cdoId": 1
+                          },
+                          "commitMetadata": {
+                            "author": "SomeUserName",
+                            "properties": [],
+                            "commitDate": "2016-12-17T19:39:57.621",
+                            "id": 3
+                          },
+                          "property": "PropertyName",
+                          "left": "OldValue",
+                          "right": "NewValue"
+                        }
+                      ]
+              404:
+                description: The specified <<resourcePathName|!singularize>> does not exist.
+                headers:
+                  Keep-Alive:
+                body:
+                  application/json:
+                    schema: localizedErrorResponse
+              401:
+                headers:
+                  Keep-Alive:
+                body:
+                  application/json:
